# SDL-Rust

./: Cargo.toml
resources/: ui.layout
resources/shaders/flat/: flat.frag  flat.vert
resources/shaders/font/: font.vert
resources/shaders/rounded/: rounded.frag  rounded.vert
resources/shaders/textured/: textured.frag
src/: camera.rs  editor.rs  font.rs  image.rs  main.rs  math.rs  shader.rs  styling.rs  ui.rs
