[package]
name = "sdlgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "0.21.2"
fontdue = "0.7.2"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf","image","mixer",]